CU-03 y CU-04 desarrollados
- Se desarrollo el caso de uso para eliminar una agencia
	- Se implemento la ruta con el metodo DELETE
- Se desarrollo el caso de uso para actualizar una agencia
	- Se implemento la tuta con el metodo PUT
- Para ambos casos se retornan mensajes de error
- Se documentaros ambos casos de uso en swagger
