# app/controllers/agencia.controller.js
@@ -1,4 +1,9 @@
-import { ingresarAgencia, buscarAgencia } from "../use-cases/agencias/index.js";
+import { 
+    ingresarAgencia, 
+    buscarAgencia,
+    eliminarAgencia,
+    actualizarAgencia
+} from "../use-cases/agencias/index.js";
 
 const ingresarAgenciaController = async (req, res) => {
     const {
@@ -34,6 +39,100 @@ const buscarAgenciaController = (req, res) => {
     search.then(resp => {
         res.status(resp.status).send({
             message: resp.message
+        });
+    });
+}
+
+const eliminarAgenciaController = async (req, res) => {
+    const { agenciaId } = req.params;
+    
+    //const search = buscarAgencia(agenciaId);
+
+    /*search.then(resp => {
+        if(resp.status !== 200)
+        {
+            res.status(resp.status).send({
+                message: resp.message
+            });
+        }
+    }).then( resp => {
+        const eliminar = eliminarAgencia(agenciaId);
+
+        eliminar.then(resp => {
+            res.status(resp.status).send({
+                message: resp.message,
+            })
+        }).catch(err => {
+            res.status(err.status).send({
+                message: err.message
+            })
+        });
+    });*/
+    Promise.all([
+        await buscarAgencia(agenciaId), 
+        eliminarAgencia(agenciaId)
+    ])
+    .then(resp => {
+        const search = resp[0]; // se guarda el proceso de buscar agencia
+
+        if(search.status !== 200)
+        {
+            res.status(search.status).send({
+                message: search.message
+            });
+
+            return;
+        }
+
+        const deleted = resp[1]; // se guarda el proceso de eliminar agencia
+
+        res.status(deleted.status).send({
+            message: deleted.message,
+        });
+
+    }).catch(err => {
+        res.status(err.status).send({
+            message: err.message
+        });
+    });
+}
+
+const actualizarAgenciaController = (req, res) => {
+    
+    const { agenciaId } = req.params;
+
+    function search(id){
+        return new Promise((res, rej)=>{
+            const buscar = buscarAgencia(id);
+            res(buscar);
+        })
+    }
+
+    function update(id, newDatos){
+        return new Promise((res, rej)=>{
+            const up = actualizarAgencia(id, newDatos);
+            res(up);
+        });
+    }
+
+    search(agenciaId).then((agencia) => {
+
+        agencia.status !== 200 && 
+        res.status(agencia.status).send({
+            message: agencia.message
+        });
+        
+        return agencia.message;
+    })
+    .then((datos) => update(datos.id, req.body))
+    .then(result => {
+        res.status(result.status).send({
+            message: result.message,
+        })
+    })
+    .catch(err=>{
+        res.status(err.status).send({
+            message: err.message
         })
     });
 }
@@ -41,4 +140,6 @@ const buscarAgenciaController = (req, res) => {
 export default Object.freeze({
     ingresarAgencia: ingresarAgenciaController,
     buscarAgencia: buscarAgenciaController,
+    eliminarAgencia: eliminarAgenciaController,
+    actualizarAgencia: actualizarAgenciaController,
 });
